# isola

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Makefile.toml  README.md  deny.toml  flake.nix  justfile  mkdocs.yaml  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  rust-toolchain.toml  treefmt.nix
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/src/: lib.rs
crates/c-api/: CMakeLists.txt  Cargo.toml  build.rs  cbindgen.toml
crates/c-api-export/: Cargo.toml
crates/c-api-export/src/: lib.rs
crates/c-api/export/: Cargo.toml
crates/c-api/export/src/: lib.rs
crates/c-api/include/: isola.h  promptkit.h
crates/c-api/src/: env.rs  error.rs  lib.rs
crates/c-api/tests/: CMakeLists.txt  test_context.cpp
crates/c_api/: CMakeLists.txt  Cargo.toml  cbindgen.toml
crates/c_api/include/: promptkit.h
crates/c_api/src/: error.rs  lib.rs
crates/cbor/: Cargo.toml
crates/cbor/src/: lib.rs  prost.rs
crates/executor/: Cargo.toml  wit
crates/executor/src/: atomic_cell.rs  env.rs  error.rs  lib.rs  resource.rs  trace.rs  trace_output.rs  types.rs  vm_cache.rs  vm_manager.rs
crates/executor/src/vm/: bindgen.rs  host_types.rs  http.rs  http_client.rs  llm.rs  mod.rs  run.rs  state.rs
crates/executor/src/wasm/: http.rs  llm.rs  logging.rs  mod.rs  vm.rs
crates/executor/wit/: http-client.wit  python.wit  sandbox.wit
crates/isola/: Cargo.toml
crates/isola-trace/: Cargo.toml
crates/isola-trace/src/collect/: mod.rs  tracer.rs
crates/isola/benches/: integration.rs
crates/isola/benches/integration/: js.rs  python.rs
crates/isola/src/: error.rs  host.rs  lib.rs  module.rs  value.rs
crates/isola/src/internal/: mod.rs  resource.rs  trace_output.rs
crates/isola/src/net/: acl.rs  dns.rs  mod.rs  private_ranges.rs
crates/isola/src/request/: error.rs  http.rs  mod.rs  options.rs  trace.rs
crates/isola/src/sandbox/: args_macro.rs  mod.rs
crates/isola/src/trace/: consts.rs  mod.rs
crates/isola/tests/: integration.rs  integration_python.rs  public_api.rs
crates/isola/tests/js/: common.rs  core.rs  hostcall.rs  http.rs  mod.rs
crates/isola/tests/python/: common.rs  core.rs  hostcall.rs  http.rs  mod.rs  third_party.rs
crates/isola/wit/: deps.toml  guest.wit  host.wit  runtime.wit  world.wit
crates/js-runtime/: Cargo.toml  build.rs
crates/js-runtime/js/sandbox/: async.js  wintertc_abort.js  wintertc_http.js
crates/js-runtime/src/: error.rs  lib.rs  script.rs  serde.rs  transpile.rs
crates/js-sdk/: Cargo.toml  _runtime.ts  biome.json  index.ts  package.json  tsconfig.json  types.ts  vitest.config.ts
crates/js-sdk/npm/: .gitignore  biome.json  package.json  vitest.config.ts
crates/js-sdk/src/: context.rs  env.rs  error.rs  lib.rs  sandbox.rs  stream.rs
crates/js-sdk/tests/: basic.test.ts
crates/promptkit/: Cargo.toml
crates/promptkit/src/: environment.rs  error.rs  lib.rs  runtime.rs  script.rs  stream.rs
crates/promptkit_executor/: Cargo.toml
crates/promptkit_executor/src/: atomic_cell.rs  lib.rs  memory_buffer.rs  trace.rs  trace_output.rs  vm_cache.rs  vm_manager.rs
crates/promptkit_executor/wit/: python.wit
crates/promptkit_python/: Cargo.toml
crates/promptkit_python/src/: error.rs  lib.rs  script.rs  wasm.rs
crates/promptkit_python/wit/: python.wit
crates/promptkit_server/: Cargo.toml  build.rs
crates/promptkit_server/.sqlx/: query-00bffdff7b01558157e3016dccade202185df1f0a23df6a507fa4e838a047ba5.json  query-092b987df92770de8ae45b236b374c1b47efaaf3a2233a7231850505e08b17e3.json  query-4e49d977fa751c63bca648c1e322f78f0b662531d76f106c93f6611178826b7b.json  query-84ba1d02aeb346c21bbb303560566f88f71371a5c2146d68ad1d284093ffbe4b.json  query-990e5b20b4fda593d136099c9733b761c80e6ea8a506df36b1d022e660496168.json  query-afd1c1527f9b87381594ca41a918964061fa5497d47aa67d3acae98c6506d43a.json  query-d36b7aff3e9b5907850b78e5738e36c3b706c3c5468a48374733be5a9c90460a.json  query-e3aebf23142cc1e77901354155e358245f596ade260f601f2336d359212c9143.json  query-f1a8ccf13be663ef562edddc4dc14f6bf9cee33eaf40180015426d28b4d7261c.json  query-f7089359359ea64f2627bfa9bfde1b3557f35aecfc6703ea9d5aed3596097178.json
crates/promptkit_server/migrations/: 20240103120129_initialize.sql
crates/promptkit_server/proto/: script.v1.proto
crates/promptkit_server/src/: error.rs  hybrid.rs  main.rs  memory_buffer.rs  resource.rs  script_manager.rs  server.rs  service.rs  user.rs  vm.rs  vm_cache.rs  vm_manager.rs
crates/promptkit_server/wit/: http-client.wit  python.wit
crates/python-runtime/: Cargo.toml  build.rs  pyproject.toml
crates/python-runtime/src/: error.rs  lib.rs  pymeta.rs  script.rs  serde.rs
crates/python-sdk/: Cargo.toml  README.md  pyproject.toml
crates/python-sdk/src/: lib.rs  serde.rs
crates/python-sdk/tests/: test_api.py
crates/request/: Cargo.toml
crates/request/src/: client.rs  error.rs  grpc.rs  http.rs  lib.rs  options.rs  trace.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: cbor.rs  lib.rs  lifecycle.rs  pending.rs  time.rs  wasi_http.rs
crates/server/: Cargo.toml  build.rs
crates/server/src/: hybrid.rs  main.rs  proto.rs  server.rs
crates/transcode/: Cargo.toml
crates/transcode/src/: lib.rs  prost.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: async_shim.rs  main.rs
tests/rpc/: buf.gen.yaml  conftest.py  pyproject.toml  test_execute.py
tests/rpc/data/: basic.py  grpc.py  http.py  third_party.py  websocket.py
tests/rpc/src/: conftest.py  http_client.py  test_execute.py  test_http.py  test_mcp.py  test_runtime.py  test_third_party.py  test_websocket.py
tests/rpc/tests/: test_execute.py  test_grpc.py
wasm/: Cargo.toml  Makefile.toml  deny.toml  rust-toolchain.toml
wasm/.cargo/: config.toml
wasm/crates/python/: Cargo.toml  build.rs  bundle.py  requirements.txt  wit
wasm/crates/wasi-runtime/: Cargo.toml
wasm/crates/xtask/: Cargo.toml
wasm/lib/: Dockerfile  build.sh  libpython.patch
wasm/promptkit_python/: Cargo.toml  build.rs
wasm/promptkit_python/src/: error.rs  lib.rs  script.rs  serde.rs  wasm.rs
wasm/promptkit_python/wit/: http-client.wit  python.wit
(+445 files in other folders)
