[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.2.0"
edition = "2024"
publish = false
license = "Apache-2.0"
documentation = "https://brian14708.github.io/isola/"
homepage = "https://brian14708.github.io/isola/"
repository = "https://github.com/brian14708/isola"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
bytes = "1.10"
component-init-transform = "0.1"
criterion = "0.8"
dashmap = "6.1"
eventsource = { version = "0.5", default-features = false }
fastant = "0.1"
futures = "0.3"
glob = "0.3"
heapless = "0.9"
http = "1.3"
http-body = "1.0"
http-body-util = "0.1"
hyper = "1.4"
isola = { path = "crates/isola" }
metrics-exporter-prometheus = { version = "0.18", default-features = false }
mimalloc = { version = "0.1", default-features = false }
minicbor = "2.0"
minicbor-serde = "0.6"
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", default-features = false }
opentelemetry-semantic-conventions = "0.31"
opentelemetry_sdk = "0.31"
parking_lot = "0.12"
pin-project-lite = "0.2"
pyo3 = "0.28"
pyo3-async-runtimes = "0.28"
pyo3-build-config = "0.28"
rand = "0.10"
reqwest = { version = "0.13", default-features = false }
rlimit = "0.11"
rmcp = "0.17"
rquickjs = "0.11"
serde = "1.0"
serde-transcode = "1.1"
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
smallvec = "1.13"
tempfile = "3.10"
thiserror = "2.0"
tokio = "1.45"
tokio-stream = "0.1"
tower-http = "0.6"
tracing = "0.1"
tracing-opentelemetry = "0.32"
tracing-subscriber = "0.3"
url = "2.5"
utoipa = "5.4"
wasi-preview1-component-adapter-provider = "42.0"
wasmtime = { version = "42.0", default-features = false }
wasmtime-wasi = "42.0"
wasmtime-wasi-http = { version = "42.0", default-features = false }
wiremock = "0.6"
wit-bindgen = { version = "0.53", default-features = false }
wit-component = "0.245"
xshell = "0.2"

[profile.release-lto]
inherits = "release"
lto = true
strip = true
