[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.5.0"
edition = "2024"
publish = false
license = "Apache-2.0"
documentation = "https://brian14708.github.io/isola/"
homepage = "https://brian14708.github.io/isola/"
repository = "https://github.com/brian14708/isola"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
bytes = "1.10"
cbindgen = "0.29"
criterion = "0.8"
eventsource = { version = "0.5", default-features = false }
futures = "0.3"
glob = "0.3"
heapless = "0.9"
http = "1.3"
http-body = "1.0"
http-body-util = "0.1"
hyper = "1.4"
isola = { path = "crates/isola" }
isola-c-api = { path = "crates/c-api" }
isola-runtime = { path = "crates/runtime" }
minicbor = "2.0"
minicbor-serde = "0.7"
napi = { version = "3.10", default-features = false }
napi-build = "2.3"
napi-derive = "3.5"
oxc = "0.140"
parking_lot = "0.12"
pyo3 = "0.29"
pyo3-async-runtimes = "0.29"
pyo3-build-config = "0.29"
reqwest = { version = "0.13", default-features = false }
rquickjs = "0.12"
rustc-demangle = "0.1"
serde = "1.0"
serde-transcode = "1.1"
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.11"
smallvec = "1.13"
tempfile = "3.10"
thiserror = "2.0"
tokio = "1.45"
tokio-stream = "0.1"
tracing = "0.1"
url = "2.5"
wasi-preview1-component-adapter-provider = "46.0"
wasm-encoder = "0.253"
wasmparser = { version = "0.254", default-features = false }
wasmtime = { version = "47.0", default-features = false }
wasmtime-wasi = "47.0"
wasmtime-wasi-http = { version = "47.0", default-features = false, features = ["p3"] }
wasmtime-wizer = { version = "47.0", default-features = false }
wiremock = "0.6"
wit-bindgen = { version = "0.59", default-features = false }
wit-component = "0.254"
wit-parser = "0.254"
xshell = "0.2"

[profile.release]
lto = "thin"
strip = true
