[project]
name = "isola-workspace"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[tool.uv.sources]
isola = { workspace = true }
isola-py = { workspace = true }

[tool.uv.workspace]
members = [
    "crates/py-binding",
    "crates/python/bundled",
]

[dependency-groups]
dev = [
    "basedmypy>=2.10.0",
    "basedpyright>=1.31.1",
    "ruff>=0.11.2",
    "types-pyyaml>=6.0.12.20250516",
]
