[project]
name = "isola-workspace"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = []

[tool.uv.sources]
isola = { workspace = true }
isola-py = { workspace = true }

[tool.uv.workspace]
members = [
    "crates/python-sdk",
    "crates/python-runtime",
]

[dependency-groups]
dev = [
    "basedmypy>=2.10.0",
    "basedpyright>=1.31.1",
    "ruff>=0.11.2",
]
