[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.83"
base64 = "0.22.1"
eventsource = { version = "0.5.0", default-features = false }
glob = "0.3.2"
heapless = "0.8"
memchr = "2.7.4"
minicbor = "2.0.0"
minicbor-serde = "0.6.0"
pyo3 = { version = "0.25.1", git = "https://github.com/brian14708/pyo3.git", branch = "wasi-0.25" }
serde = "1.0.199"
serde_json = "1.0.116"
serde_yaml = "0.9.34"
thiserror = "2.0.0"
url = "2.5.0"
wasi-preview1-component-adapter-provider = "34.0.0"
wit-bindgen = { version = "0.43.0", default-features = false }
wit-component = "0.235.0"
xshell = "0.2.6"

[profile.release]
lto = true
codegen-units = 1
