[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false
license = ""

[workspace.dependencies]
anyhow = "1.0.83"
base64 = "0.22.1"
eventsource = { version = "0.5.0", default-features = false }
glob = "0.3.2"
heapless = "0.8"
minicbor = "2.0.0"
minicbor-serde = "0.6.0"
pyo3 = { version = "0.26.0-dev", git = "https://github.com/PyO3/pyo3.git", rev = "076617135b34e14775510ab87ec74621b3d30213" }
serde = "1.0.199"
serde_json = "1.0.116"
serde_yaml = "0.9.34"
smallvec = "1.15.1"
thiserror = "2.0.0"
url = "2.5.0"
wasi-preview1-component-adapter-provider = "34.0.0"
wit-bindgen = { version = "0.44.0", default-features = false }
wit-component = "0.236.1"
xshell = "0.2.6"

[profile.release]
lto = true
codegen-units = 1
