[workspace]
resolver = "2"
members = ["crates/python", "crates/xtask"]

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false
license = ""

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22"
eventsource = { version = "0.5", default-features = false }
glob = "0.3"
heapless = "0.9"
minicbor = "2.0"
minicbor-serde = "0.6"
pyo3 = "0.26"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
smallvec = "1.15"
thiserror = "2.0"
url = "2.5"
wasi-preview1-component-adapter-provider = "37.0"
wit-bindgen = { version = "0.46", default-features = false }
wit-component = "0.239"
xshell = "0.2"

[profile.release]
lto = true
codegen-units = 1
