[package]
name = "promptkit_python"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "promptkit"
crate-type = ["cdylib"]
doc = false

[dependencies]
promptkit = { version = "0.1.0", path = "../../crates/promptkit" }
pyo3 = "0.20.0"
serde_json = "1.0.108"
