[package]
name = "isola-c-api-export"
version.workspace = true
edition.workspace = true
publish = false
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "isola"
crate-type = ["cdylib"]
doc = false
test = false
doctest = false

[dependencies]
isola-c-api = { workspace = true }

[lints]
workspace = true
