[package]
name = "isola-c-api"
version.workspace = true
edition.workspace = true
publish = false
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
isola = { workspace = true }
isola-cbor = { workspace = true }
isola-request = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tokio-stream = { workspace = true }

[build-dependencies]
cbindgen = { workspace = true }

[lints]
workspace = true
