[package]
name = "isola-c-api"
version.workspace = true
edition.workspace = true
publish = false
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
http = { workspace = true }
isola = { workspace = true, features = ["serde"] }
isola-request = { workspace = true, features = ["gzip", "tls"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tokio-stream = { workspace = true }

[build-dependencies]
cbindgen = { workspace = true }

[lints]
workspace = true
