[package]
name = "promptkit_c_api"
version.workspace = true
edition.workspace = true

[lib]
name = "promptkit"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
futures-util = "0.3.31"
http = "1.3.1"
http-body = "1.0.1"
promptkit_executor = { path = "../executor" }
promptkit_request = { path = "../request" }
promptkit_transcode = { path = "../transcode" }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }

[build-dependencies]
cbindgen = "0.29.0"
