[package]
name = "promptkit_c_api"
version.workspace = true
edition.workspace = true

[lib]
name = "promptkit"
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
promptkit_executor = { workspace = true }
promptkit_request = { workspace = true }
promptkit_cbor = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[build-dependencies]
cbindgen = { workspace = true }
