[package]
name = "promptkit-cbor"
version.workspace = true
edition.workspace = true

[dependencies]
base64 = { workspace = true }
minicbor-serde = { workspace = true, features = ["alloc"] }
prost-types = { workspace = true, optional = true }
serde = { workspace = true }
serde-transcode = { workspace = true }
serde_json = { workspace = true }

[features]
prost = ["dep:prost-types"]
