[package]
name = "isola-cbor"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
base64 = { workspace = true }
bytes = { workspace = true }
minicbor = { workspace = true }
minicbor-serde = { workspace = true, features = ["alloc"] }
serde = { workspace = true }
serde-transcode = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
