[package]
name = "promptkit_executor"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
async-trait = "0.1.80"
bytes = "1.6.0"
coarsetime = "0.1.34"
eventsource-stream = "0.2.3"
futures-util = "0.3.30"
hex = "0.4.3"
opentelemetry = "0.22.0"
parking_lot = "0.12.1"
pin-project-lite = "0.2.14"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["stream", "rustls-tls-webpki-roots", "gzip"], default-features = false }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = { version = "1.0.116", features = ["raw_value"] }
sha2 = "0.10.8"
smallvec = "1.13.2"
tempdir = "0.3.7"
thiserror = "1.0.59"
tokio = "1.37.0"
tokio-stream = "0.1.15"
tracing = "0.1.40"
tracing-opentelemetry = "0.23.0"
wasmtime = { version = "20.0.0", default-features = false, features = ["cranelift", "async", "parallel-compilation", "pooling-allocator"] }
wasmtime-wasi = "20.0.0"
zip = { version = "1.1.1", default-features = false, features = ["deflate"] }
