[package]
name = "promptkit_executor"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
async-trait = "0.1.80"
bytes = "1.6.0"
futures-core = "0.3.30"
futures-util = "0.3.30"
hex = "0.4.3"
http = "1.1.0"
http-body = "1.0.1"
http-body-util = "0.1.2"
hyper = "1.4.1"
parking_lot = "0.12.2"
pin-project-lite = "0.2.14"
promptkit_llm = { path = "../llm" }
rand = "0.8.5"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
sha2 = "0.10.8"
smallvec = { version = "1.13.2", features = ["const_new"] }
tempfile = "3.10.1"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["fs"] }
tokio-stream = "0.1.15"
tracing = "0.1.40"
wasmtime = { version = "24.0.0", default-features = false, features = ["cranelift", "async", "parallel-compilation"] }
wasmtime-wasi = "24.0.0"
wasmtime-wasi-http = "24.0.0"
zip = { version = "2.0.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
http = "1.1.0"
