[package]
name = "promptkit-executor"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
component-init-transform = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
parking_lot = { workspace = true }
pin-project-lite = { workspace = true }
promptkit-trace = { workspace = true }
rand = { workspace = true }
zip = { workspace = true, features = ["deflate"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
smallvec = { workspace = true, features = ["const_new"] }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
tokio-stream = { workspace = true }
tracing = { workspace = true }
wasmtime = { workspace = true, features = ["cranelift", "async", "parallel-compilation"] }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-http = { workspace = true }

[dev-dependencies]
http = { workspace = true }
