[package]
name = "isola-trace"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
fastant = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
