[package]
name = "isola"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
component-init-transform = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
promptkit-trace = { workspace = true }
sha2 = { workspace = true }
smallvec = { workspace = true, features = ["const_new"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "time", "macros", "rt"] }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tungstenite = { workspace = true }
url = { workspace = true }
wasmtime = { workspace = true, features = ["cranelift", "async", "parallel-compilation"] }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-http = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
