[package]
name = "isola"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[features]
default = ["cbor", "trace", "request", "request-gzip", "request-tls"]
cbor = [
    "dep:base64",
    "dep:minicbor",
    "dep:minicbor-serde",
    "dep:serde",
    "dep:serde-transcode",
    "dep:serde_json",
]
trace = ["dep:fastant", "dep:rand", "dep:tracing-subscriber"]
request = [
    "dep:dashmap",
    "dep:fastant",
    "dep:opentelemetry",
    "dep:opentelemetry-semantic-conventions",
    "dep:pin-project-lite",
    "dep:reqwest",
    "dep:tracing-opentelemetry",
]
request-gzip = ["request", "reqwest/gzip"]
request-tls = ["request", "reqwest/rustls"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true, optional = true }
bytes = { workspace = true }
component-init-transform = { workspace = true }
dashmap = { workspace = true, optional = true }
fastant = { workspace = true, features = ["atomic"], optional = true }
futures = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
minicbor = { workspace = true, optional = true }
minicbor-serde = { workspace = true, features = ["alloc"], optional = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry-semantic-conventions = { workspace = true, features = [
    "semconv_experimental",
], optional = true }
pin-project-lite = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["http2", "stream", "socks"], optional = true }
serde = { workspace = true, optional = true }
serde-transcode = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
sha2 = { workspace = true }
smallvec = { workspace = true, features = ["const_new"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "time", "macros", "rt"] }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
url = { workspace = true }
wasmtime = { workspace = true, features = ["cranelift", "async", "parallel-compilation"] }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-http = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
wiremock = { workspace = true }

[lints]
workspace = true

[[test]]
name = "integration_python"
path = "tests/python/mod.rs"
required-features = ["cbor", "trace", "request"]
