[package]
name = "isola-js-runtime"
version.workspace = true
edition.workspace = true
publish = false
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
isola-runtime = { workspace = true }
minicbor = { workspace = true }
minicbor-serde = { workspace = true, features = ["alloc"] }
oxc = { workspace = true, features = ["codegen", "semantic", "transformer"] }
rquickjs = { workspace = true, features = ["classes", "properties"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[lints]
workspace = true
