[package]
name = "isola-js-sdk"
version.workspace = true
edition.workspace = true
publish = false
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
exclude = ["/tests", "/node_modules", "/dist"]

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
isola = { workspace = true, features = ["serde"] }
napi = { workspace = true, features = ["async", "tokio_rt", "serde-json"] }
napi-derive = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "time", "sync"] }
tokio-stream = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }

[lints]
workspace = true
