[package]
name = "promptkit"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustpython-pylib = { git = "https://github.com/RustPython/RustPython.git", version = "0.3.0", features = ["freeze-stdlib"] }
rustpython-stdlib = { git = "https://github.com/RustPython/RustPython.git", version = "0.3.0", features = ["threading"] }
rustpython-vm = { git = "https://github.com/RustPython/RustPython.git", version = "0.3.0", features = ["encodings", "freeze-stdlib", "serde", "threading"] }
serde = "1.0.193"
serde_json = "1.0.108"
smallvec = "1.11.2"
thiserror = "1.0.51"
tokio = { version = "1.35.0", features = ["sync", "rt", "macros"] }
