[package]
name = "promptkit_executor"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
bytes = "1.5.0"
coarsetime = "0.1.34"
eventsource-stream = "0.2.3"
parking_lot = "0.12.1"
pin-project = "1.1.4"
rand = "0.8.5"
reqwest = { version = "0.11.23", features = ["stream"] }
sha2 = { version = "0.10.8", features = ["asm"] }
smallvec = "1.13.1"
tokio = "1.35.1"
tokio-stream = "0.1.14"
tracing = "0.1.40"
wasmtime = "17.0.0"
wasmtime-wasi = "17.0.0"
