[package]
name = "promptkit_python"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rustpython-pylib = { version = "0.3.0", features = ["freeze-stdlib"] }
rustpython-stdlib = "0.3.0"
rustpython-vm = { version = "0.3.0", features = ["freeze-stdlib", "serde"] }
serde = "1.0.193"
serde_json = "1.0.108"
thiserror = "1.0.51"

[features]
default = []
threading = ["rustpython-vm/threading", "rustpython-stdlib/threading"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wit-bindgen = "0.16.0"
