[package]
name = "promptkit_server"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.76"
axum = "0.7.2"
axum-server = "0.6.0"
mimalloc = { version = "0.1.39", default-features = false }
prometheus-client = "0.22.0"
promptkit_executor = { version = "0.1.0", path = "../promptkit_executor" }
reqwest = { version = "0.11.23" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1.14"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["parking_lot"] }
