[package]
name = "promptkit_server"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.76"
axum = { version = "0.7.2", features = ["ws"] }
axum-server = "0.6.0"
futures-util = "0.3.30"
mimalloc = { version = "0.1.39", default-features = false }
mime = "0.3.17"
pin-project-lite = "0.2.13"
prometheus-client = "0.22.0"
promptkit_executor = { version = "0.1.0", path = "../promptkit_executor" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1.14"
tower-http = { version = "0.5.1", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["parking_lot"] }
