[package]
name = "isola-python-runtime"
version.workspace = true
edition.workspace = true
publish = false
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
exclude = ["/python"]

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = { workspace = true }
eventsource = { workspace = true }
isola-runtime = { workspace = true }
minicbor = { workspace = true }
minicbor-serde = { workspace = true, features = ["alloc"] }
pyo3 = { workspace = true, features = ["abi3"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[build-dependencies]
pyo3-build-config = { workspace = true, features = ["resolve-config"] }

[lints]
workspace = true
