[package]
name = "isola-python-sdk"
version.workspace = true
edition.workspace = true
publish = false
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
exclude = ["/python", "/tests"]

[lib]
name = "_isola"
crate-type = ["cdylib"]

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
isola = { workspace = true, features = ["serde"] }
minicbor = { workspace = true }
minicbor-serde = { workspace = true, features = ["alloc"] }
parking_lot = { workspace = true }
pyo3 = { workspace = true, features = ["extension-module", "abi3", "abi3-py310"] }
pyo3-async-runtimes = { workspace = true, features = ["tokio-runtime"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "time"] }
tokio-stream = { workspace = true }

[lints]
workspace = true
